# lighting

./: .gitignore  Cargo.toml  shader.pica
include_texture_macro/: Cargo.toml  build.rs
include_texture_macro/src/: lib.rs
romfs/: sphere.mtl
src/: main.rs  maths.rs
src/asset_server/: mod.rs  passthrough.rs
src/model/: colour.rs  material.rs  mod.rs  shape.rs  texture.rs
vert_attr/: Cargo.toml
vert_attr/src/: lib.rs
vert_attr_macro/: Cargo.toml
vert_attr_macro/src/: lib.rs
