[package]
name = "lighting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citro3d = { git = "https://github.com/Team-Yarg/citro3d-rs.git", branch = "0x2a/feat/lighting" }
citro3d-sys = { git = "https://github.com/Team-Yarg/citro3d-rs.git", branch = "0x2a/feat/lighting" }
ctru-rs = { git = "https://github.com/Jhynjhiruu/ctru-rs", branch = "feature/uds" }
ctru-sys = { git = "https://github.com/Jhynjhiruu/ctru-rs", branch = "feature/uds" }
vert_attr = { path = "vert_attr" }
include_texture_macro = { path = "include_texture_macro" }
libm = "0.2.8"

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
