[package]
name = "lighting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citro3d = { path = "D:/GitHub/citro3d-rs/citro3d" }
ctru-rs = { git = "https://github.com/Jhynjhiruu/ctru-rs", branch = "feature/uds" }
ctru-sys = { git = "https://github.com/Jhynjhiruu/ctru-rs", branch = "feature/uds" }
vert_attr = { path = "vert_attr" }
include_texture_macro = { path = "include_texture_macro" }
libm = "0.2.8"
glam = "0.24.1"

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
