[package]
name = "vert_attr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
vert_attr_macro = { path = "../vert_attr_macro" }
citro3d = { git = "https://github.com/Team-Yarg/citro3d-rs" }
glam = "0.24.1"
